test/corpus/comments_and_spacing.txt
================================
Comments and Spacing
================================

;; This file tests comments, blank lines, and whitespace handling.


;; A full-line comment after blank lines.

    ;; An indented comment should also work.

SPEAKER file_A 1 1.0 1.0 <NA> <NA> spk_A <NA> <NA> ;; A comment at the end of a line.

;; Another comment
SPEAKER file_B 1 3.0 1.0 <NA> <NA> spk_B <NA> <NA>



;; The file ends with blank lines.

----

(source_file
  (comment)
  (comment)
  (comment)
  (entry
    (event_type)
    (file_id)
    (channel)
    (start_time)
    (duration)
    (orthography
      (_field
        (_null)))
    (speaker_type
      (_field
        (_null)))
    (speaker_id
      (_field
        (_identifier)))
    (confidence
      (_number_or_na
        (_null)))
    (signal_look_time
      (_field
        (_null))))
  (comment)
  (comment)
  (entry
    (event_type)
    (file_id)
    (channel)
    (start_time)
    (duration)
    (orthography
      (_field
        (_null)))
    (speaker_type
      (_field
        (_null)))
    (speaker_id
      (_field
        (_identifier)))
    (confidence
      (_number_or_na
        (_null)))
    (signal_look_time
      (_field
        (_null))))
  (comment))
