test/corpus/mixed_entries.txt
================================
Mixed Dialects
================================

;; RTTM Corpus Test File
;; Expanded entries with metadata-oriented records.

SPKR-INFO meeting 1 <NA> <NA> speaker_alpha adult en_US <NA> <NA>
TURN meeting 1 0.00 2.50 <NA> floor speaker_alpha <NA> <NA>
SEGMENT meeting 1 0.00 2.50 <NA> <NA> speaker_alpha <NA> <NA>
SPEAKER meeting 1 0.00 2.50 <NA> <NA> speaker_alpha 0.85 <NA>
FU meeting 1 0.00 0.80 backchannel <NA> speaker_beta <NA> <NA>
SU meeting 1 0.00 2.50 statement <NA> speaker_alpha <NA> <NA>
LEXEME meeting 1 0.10 0.30 roadmap <NA> speaker_alpha 0.92 <NA>
NON-LEX meeting 1 0.45 0.15 laughter <NA> speaker_alpha <NA> <NA>
NON-SPEECH meeting 1 2.50 1.25 applause <NA> audience <NA> <NA>
NON-SPEECH meeting 1 1.25 0.20 um <NA> speaker_beta 0.40 <NA>

;; Inline note after metadata block
SPEAKER meeting 1 3.00 1.00 <NA> <NA> speaker_gamma <NA> <NA> ;; overlaps with applause

----

(source_file
  (comment)
  (comment)
  (entry
    (event_type)
    (file_id
      (identifier))
    (channel
      (channel_number))
    (start_time
      (null_literal))
    (duration
      (null_literal))
    (orthography
      (text_value))
    (speaker_type
      (text_value))
    (speaker_id
      (text_value))
    (confidence
      (null_literal))
    (signal_look_time
      (null_literal)))
  (entry
    (event_type)
    (file_id
      (identifier))
    (channel
      (channel_number))
    (start_time
      (time_value))
    (duration
      (time_value))
    (orthography
      (null_literal))
    (speaker_type
      (text_value))
    (speaker_id
      (text_value))
    (confidence
      (null_literal))
    (signal_look_time
      (null_literal)))
  (entry
    (event_type)
    (file_id
      (identifier))
    (channel
      (channel_number))
    (start_time
      (time_value))
    (duration
      (time_value))
    (orthography
      (null_literal))
    (speaker_type
      (null_literal))
    (speaker_id
      (text_value))
    (confidence
      (null_literal))
    (signal_look_time
      (null_literal)))
  (entry
    (event_type)
    (file_id
      (identifier))
    (channel
      (channel_number))
    (start_time
      (time_value))
    (duration
      (time_value))
    (orthography
      (null_literal))
    (speaker_type
      (null_literal))
    (speaker_id
      (text_value))
    (confidence
      (number))
    (signal_look_time
      (null_literal)))
  (entry
    (event_type)
    (file_id
      (identifier))
    (channel
      (channel_number))
    (start_time
      (time_value))
    (duration
      (time_value))
    (orthography
      (text_value))
    (speaker_type
      (null_literal))
    (speaker_id
      (text_value))
    (confidence
      (null_literal))
    (signal_look_time
      (null_literal)))
  (entry
    (event_type)
    (file_id
      (identifier))
    (channel
      (channel_number))
    (start_time
      (time_value))
    (duration
      (time_value))
    (orthography
      (text_value))
    (speaker_type
      (null_literal))
    (speaker_id
      (text_value))
    (confidence
      (null_literal))
    (signal_look_time
      (null_literal)))
  (entry
    (event_type)
    (file_id
      (identifier))
    (channel
      (channel_number))
    (start_time
      (time_value))
    (duration
      (time_value))
    (orthography
      (text_value))
    (speaker_type
      (null_literal))
    (speaker_id
      (text_value))
    (confidence
      (number))
    (signal_look_time
      (null_literal)))
  (entry
    (event_type)
    (file_id
      (identifier))
    (channel
      (channel_number))
    (start_time
      (time_value))
    (duration
      (time_value))
    (orthography
      (text_value))
    (speaker_type
      (null_literal))
    (speaker_id
      (text_value))
    (confidence
      (null_literal))
    (signal_look_time
      (null_literal)))
  (entry
    (event_type)
    (file_id
      (identifier))
    (channel
      (channel_number))
    (start_time
      (time_value))
    (duration
      (time_value))
    (orthography
      (text_value))
    (speaker_type
      (null_literal))
    (speaker_id
      (text_value))
    (confidence
      (null_literal))
    (signal_look_time
      (null_literal)))
  (entry
    (event_type)
    (file_id
      (identifier))
    (channel
      (channel_number))
    (start_time
      (time_value))
    (duration
      (time_value))
    (orthography
      (text_value))
    (speaker_type
      (null_literal))
    (speaker_id
      (text_value))
    (confidence
      (number))
    (signal_look_time
      (null_literal)))
  (comment)
  (entry
    (event_type)
    (file_id
      (identifier))
    (channel
      (channel_number))
    (start_time
      (time_value))
    (duration
      (time_value))
    (orthography
      (null_literal))
    (speaker_type
      (null_literal))
    (speaker_id
      (text_value))
    (confidence
      (null_literal))
    (signal_look_time
      (null_literal)))
  (comment))
